<resources>
    <string name="app_name">BaseDatosSQLite</string>
    <string name="tbtbregistra">Registrar</string>
    <string name="Mprincipal">Menus Principal</string>
    <string name="toRegistra">Opcion Registro</string>
    <string name="INombre">Ingresa tu Nombre</string>
    <string name="IEdad">Ingresa tu edad</string>
    <string name="ISexo">Ingresa tu sexo</string>
    <string name="RbtnRegistrar">Registra</string>
    <string name="listaregistros">Listado de Contactos</string>
    <string name="listaelementos">Listar Usuarios</string>
    <string name="dinformacion">Informacion Usuario</string>
    <string name="dnombre">Nombre</string>
    <string name="ddi" />
    <string name="did">ID</string>
    <string name="dedad">Edad</string>
    <string name="dsexo">Sexo</string>
    <string name="btnactualizard">Actualizar</string>
    <string name="btnliminard">Eliminar</string>
</resources>